--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,16 @@
 % Define the differential d notation
 \def \d{\mathrm{d}}
 
+% Required for loading data into tables
+\usepackage{csvsimple}
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{multirow}
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+
+
 \ifdefined\only
 	\includeonly{fem}
 \fi
