Add some of the conclusion, needs more work.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,9 +1,23 @@
 \chapter{Conclusion}
 
+The work completed in this project has led to the successful development of a solver for the Helmholtz equation in Fourier decomposed cylindrical coordinates.
+We have built on the existing machinery for the Helmholtz equation in Cartesian coordinates and extended the 
+
+Results gathered in the previous chapter demonstrate that the cylindrical Helmholtz equation behaves like the Cartesian version of the equation.
+For example, the 
+
+We discussed issues that could caused problems when finding the solution.
+Namely, the problem
+
+The shifted-Laplacian preconditioner works fine in the change of variables.
+
+In summary, it has been shown that a multigrid based preconditioner for FGMRES is a viable method for solving the finite element discretisation of the Fourier decomposed Helmholtz equation in cylindrical coordinates.
 
 
 
 
+
+% -------------------------------------
 
 \section{Further work}
 
